# ocp-backend

./: .env  .env.example  README.md  alembic.ini  app.db  demo.txt  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 2c36ad3b644d_initial_migration.py
app/: main.py
app/core/: config.py  database.py  dependencies.py  security.py
app/models/: __init__.py  alert.py  commit.py  jira_task.py  merge_request.py  project.py  review_comment.py  user.py
app/routers/: alerts.py  auth.py  dashboard.py  github.py  jira.py  projects.py  scores.py  webhooks.py
app/schemas/: __init__.py  alert.py  commit.py  jira_task.py  merge_request.py  project.py  review_comment.py  user.py
app/services/: auth_service.py  github_service.py  jira_service.py  llm_service.py  score_engine.py  webhook_service.py
